--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
 
         <h1>Interface 2</h1>
 
-        <div>
-
-        </div>
+        <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+            <div class="card-header">User right now</div>
+            <div class="card-body">
+              <h5 class="card-title">Primary card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
     
     </body>
 </html>
