Amélioration dans l'exo interface 2

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 </tbody>
             </table>
         </div>
+        <button type="button" class="btn btn-primary">REAL-TIME REPORT ></button>
     </div>
 
 </body>
