--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
         <button type="button" class="btn btn-primary">REAL-TIME REPORT ></button>
     </div>
 
+
+    <h1>Interface 3</h1>
+
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="assets/img/IMG_2480.jpg" class="card-img" alt="photoShoot">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Firouzfar Sebastien</h5>
+              <p class="card-text">Jeune future developpeur web qui suit actuellement une formation chez BeCode situé à 1000 BRUXELLES à gare centrale</p>
+              <img src="assets/img/unnamed.png" alt="Avatar" class="avatar"> 
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
 </body>
 
 </html>
